--- a/src/assets/scss/_themes-vars.module.scss
+++ b/src/assets/scss/_themes-vars.module.scss
@@ -2,7 +2,7 @@
 $paper: #ffffff;
 
 // primary
-$primaryLight: #e3f2fd;
+$primaryLight: #dbfae8;
 $primaryMain: #2196f3;
 $primaryDark: #1e88e5;
 $primary200: #90caf9;
